--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,25 @@ div{
 .hidden{
     display: none;
 }
+.input-row, .input-col {
+    width: 100px;
+}
+.row {
+    margin:0 0 0 20px;
+}
+table,
+tr,
+td {
+    border: 1px solid black;
+}
+tr {
+    height: 20px;
+}
+
+td {
+    width: 20px;
+}
+.col-md-6 {
+    padding: 0;
+    margin: 0;
+}
